Cerrar Sesion y editar perfil funcionando en todos los perfiles

--- a/app/src/main/res/layout/activity_perfil_pasajero.xml
+++ b/app/src/main/res/layout/activity_perfil_pasajero.xml
@@ -103,6 +103,20 @@
                                 <com.google.android.material.textfield.TextInputEditText
                                     android:layout_width="300dp"
                                     android:layout_height="wrap_content"
+                                    android:id="@+id/etCambioJefePasajero"
+                                    android:enabled="false"
+                                    android:hint="Ingrese el correo de su nuevo Jefe"
+                                    android:inputType="textEmailAddress"
+                                    android:visibility="invisible"/>
+                            </com.google.android.material.textfield.TextInputLayout>
+
+
+                        </TableRow>
+                        <TableRow>
+                            <com.google.android.material.textfield.TextInputLayout>
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:layout_width="300dp"
+                                    android:layout_height="wrap_content"
                                     android:id="@+id/etCambiopasswordPasajero"
                                     android:theme="@style/Widget.AppCompat.EditText"
                                     android:enabled="false"
