--- a/app/src/main/res/layout/activity_inicio_propietario.xml
+++ b/app/src/main/res/layout/activity_inicio_propietario.xml
@@ -8,6 +8,14 @@
     android:orientation="vertical"
     android:padding="10dp"
     android:background="@color/colorWhite">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
     <LinearLayout
         android:clipToPadding="false"
@@ -75,14 +83,14 @@
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:background="@drawable/circlebackgroundred"
-                    android:src="@drawable/ic_favoritos_24dp"
+                    android:src="@drawable/ic_ruta_24dp"
                     android:padding="15dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
                     android:layout_marginTop="10dp"
-                    android:text="Añadir"
+                    android:text="Ver Rutas"
                     android:textColor="#000"/>
                 <View
                     android:layout_width="match_parent"
@@ -93,7 +101,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Agregar Unidades al Sistema"
+                    android:text="Recorridos de Unidades"
                     android:padding="5dp"
                     android:textColor="#000"/>
             </LinearLayout>
@@ -127,7 +135,7 @@
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:background="@drawable/circlebackgroundred"
-                    android:src="@drawable/ic_buscar_24dp"
+                    android:src="@drawable/ic_unidad_24dp"
                     android:padding="10dp" />
                 <TextView
                     android:layout_width="wrap_content"
@@ -224,14 +232,14 @@
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:background="@drawable/circlebackgroundred"
-                    android:src="@drawable/ic_configuracion_24dp"
+                    android:src="@drawable/ic_shared_24dp"
                     android:padding="10dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
                     android:layout_marginTop="10dp"
-                    android:text="Configuracion"
+                    android:text="Contactanos"
                     android:textColor="#000"/>
                 <View
                     android:layout_width="match_parent"
@@ -242,7 +250,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Ajustes de aplicacion"
+                    android:text="Redes de la App"
                     android:padding="5dp"
                     android:textColor="#000"/>
             </LinearLayout>
@@ -298,6 +306,7 @@
     </LinearLayout>
 
 
-
+</LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
