--- a/app/src/main/res/layout/activity_buscar_unidades.xml
+++ b/app/src/main/res/layout/activity_buscar_unidades.xml
@@ -7,6 +7,14 @@
     android:orientation="vertical"
     android:padding="6dp"
     tools:context=".BuscarUnidades">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
     <ImageButton
         android:id="@+id/btnCerrarVentanaBuscar"
         android:layout_width="50dp"
@@ -255,5 +263,7 @@
             android:visibility="invisible"
             android:id="@+id/rutaurl"/>
     </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
