--- a/app/src/main/res/layout/activity_inicio_pasajero.xml
+++ b/app/src/main/res/layout/activity_inicio_pasajero.xml
@@ -8,6 +8,14 @@
     android:orientation="vertical"
     android:padding="10dp"
     android:background="@color/colorWhite">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
     <LinearLayout
         android:clipToPadding="false"
@@ -78,14 +86,14 @@
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:background="@drawable/circlebackgroundred"
-                    android:src="@drawable/ic_favoritos_24dp"
+                    android:src="@drawable/ic_ruta_24dp"
                     android:padding="10dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
                     android:layout_marginTop="10dp"
-                    android:text="Favoritos"
+                    android:text="Rutas"
                     android:textColor="#000"/>
                 <View
                     android:layout_width="match_parent"
@@ -96,7 +104,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Lista de tus unidades favoritas"
+                    android:text="Recorridos Actuales"
                     android:padding="5dp"
                     android:textColor="#000"/>
             </LinearLayout>
@@ -229,14 +237,14 @@
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:background="@drawable/circlebackgroundred"
-                    android:src="@drawable/ic_configuracion_24dp"
+                    android:src="@drawable/ic_shared_24dp"
                     android:padding="10dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
                     android:layout_marginTop="10dp"
-                    android:text="Configuracion"
+                    android:text="Contactanos"
                     android:textColor="#000"/>
                 <View
                     android:layout_width="match_parent"
@@ -247,7 +255,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="...s"
+                    android:text="Siguenos en Nuestras Redes"
                     android:padding="5dp"
                     android:textColor="#000"/>
             </LinearLayout>
@@ -302,7 +310,8 @@
 
     </LinearLayout>
 
-
+        </LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
